platform_versioned_docs/version-4.3.0/api/_partials/resources/ownedaccesskeys/reference.mdx

import Metadata from "../metadata/reference.mdx"

<Metadata />



<details className="config-field" data-expandable="true">
<summary>

## `spec` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `displayName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-displayName}

The display name shown in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `description` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-description}

Description describes an app

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `user` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-user}

The user this access key refers to

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `team` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-team}

The team this access key refers to

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `subject` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-subject}

Subject is a generic subject that can be used
instead of user or team

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `groups` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-groups}

Groups specifies extra groups to apply when using
this access key

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-key}

The actual access key that will be used as a bearer token

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `disabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-disabled}

If this field is true, the access key is still allowed to exist,
however will not work to access the api

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `ttl` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-ttl}

The time to life for this access key

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `ttlAfterLastActivity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-ttlAfterLastActivity}

If this is specified, the time to life for this access key will
start after the lastActivity instead of creation timestamp

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `scope` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope}

Scope defines the scope of the access key.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `roles` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-roles}

Roles is a set of managed permissions to apply to the access key.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `role` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-roles-role}

Role is the name of the role to apply to the access key scope.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `projects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-roles-projects}

Projects specifies the projects the access key should have access to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `virtualClusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-roles-virtualClusters}

VirtualClusters specifies the virtual clusters the access key is allowed to access.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `projects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-projects}

Projects specifies the projects the access key should have access to.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-projects-project}

Project is the name of the project. You can specify * to select all projects.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `spaces` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-spaces}

Spaces specifies the spaces the access key is allowed to access.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-spaces-project}

Project is the name of the project.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `space` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-spaces-space}

Space is the name of the space. You can specify * to select all spaces.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `virtualClusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-virtualClusters}

VirtualClusters specifies the virtual clusters the access key is allowed to access.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-virtualClusters-project}

Project is the name of the project.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `virtualCluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-virtualClusters-virtualCluster}

VirtualCluster is the name of the virtual cluster to access. You can specify * to select all virtual clusters.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `clusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-clusters}

Clusters specifies the project cluster the access key is allowed to access.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-clusters-cluster}

Cluster is the name of the cluster to access. You can specify * to select all clusters.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules}

DEPRECATED: Use Projects, Spaces and VirtualClusters instead
Rules specifies the rules that should apply to the access key.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `verbs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-verbs}

The verbs that match this rule.
An empty list implies every verb.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-resources}

Resources that this rule matches. An empty list implies all kinds in all API groups.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-resources-group}

Group is the name of the API group that contains the resources.
The empty string represents the core API group.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-resources-resources}

Resources is a list of resources this rule applies to.

For example:
'pods' matches pods.
'pods/log' matches the log subresource of pods.
'*' matches all resources and their subresources.
'pods/*' matches all subresources of pods.
'*/scale' matches all scale subresources.

If wildcard is present, the validation rule will ensure resources do not
overlap with each other.

An empty list implies all resources and subresources in this API groups apply.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `resourceNames` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-resources-resourceNames}

ResourceNames is a list of resource instance names that the policy matches.
Using this field requires Resources to be specified.
An empty list implies that every instance of the resource is matched.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespaces` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-namespaces}

Namespaces that this rule matches.
The empty string "" matches non-namespaced resources.
An empty list implies every namespace.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nonResourceURLs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-nonResourceURLs}

NonResourceURLs is a set of URL paths that should be checked.
*s are allowed, but only as the full, final step in the path.
Examples:
 "/metrics" - Log requests for apiserver metrics
 "/healthz*" - Log all health checks

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `requestTargets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-requestTargets}

RequestTargets is a list of request targets that are allowed.
An empty list implies every request.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-cluster}

Cluster that this rule matches. Only applies to cluster requests.
If this is set, no requests for non cluster requests are allowed.
An empty cluster means no restrictions will apply.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualClusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-virtualClusters}

VirtualClusters that this rule matches. Only applies to virtual cluster requests.
An empty list means no restrictions will apply.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-virtualClusters-name}

Name of the virtual cluster. Empty means all virtual clusters.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-rules-virtualClusters-namespace}

Namespace of the virtual cluster. Empty means all namespaces.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `allowLoftCli` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-scope-allowLoftCli}

AllowLoftCLI allows certain read-only management requests to
make sure loft cli works correctly with this specific access key.

Deprecated: Use the `roles` field instead
 ```yaml
 # Example:
 roles:
   - role: loftCLI
 ```

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `type` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-type}

The type of an access key, which basically describes if the access
key is user managed or managed by loft itself.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `identity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity}

If available, contains information about the sso login data for this
access key

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `userId` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-userId}

The subject of the user

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `username` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-username}

The username

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `preferredUsername` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-preferredUsername}

The preferred username / display name

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `email` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-email}

The user email

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `emailVerified` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-emailVerified}

If the user email was verified

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `groups` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-groups}

The groups from the identity provider

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `connector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-connector}

Connector is the name of the connector this access key was created from

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `connectorData` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identity-connectorData}

ConnectorData holds data used by the connector for subsequent requests after initial
authentication, such as access tokens for upstream providers.

This data is never shared with end users, OAuth clients, or through the API.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `identityRefresh` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-identityRefresh}

The last time the identity was refreshed

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `oidcProvider` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcProvider}

If the token is a refresh token, contains information about it

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `clientId` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcProvider-clientId}

ClientId the token was generated for

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nonce` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcProvider-nonce}

Nonce to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `redirectUri` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcProvider-redirectUri}

RedirectUri to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `scopes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcProvider-scopes}

Scopes to use

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `parent` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-parent}

DEPRECATED: do not use anymore
Parent is used to share OIDC and external token information
with multiple access keys. Since copying an OIDC refresh token
would result in the other access keys becoming invalid after a refresh
parent allows access keys to share that information.

The use case for this is primarily user generated access keys,
which will have the users current access key as parent if it contains
an OIDC token.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `oidcLogin` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcLogin}

DEPRECATED: Use identity instead
If available, contains information about the oidc login data for this
access key

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `idToken` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcLogin-idToken}

The current id token that was created during login

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `accessToken` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcLogin-accessToken}

The current access token that was created during login

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `refreshToken` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcLogin-refreshToken}

The current refresh token that was created during login

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `lastRefresh` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-oidcLogin-lastRefresh}

The last time the id token was refreshed

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

## `status` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status}



</summary>




<details className="config-field" data-expandable="true">
<summary>

### `lastActivity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-lastActivity}

The last time this access key was used to access the api

</summary>



</details>


</details>
